--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,21 @@ h1{
   text-decoration: underline;
   text-align: center;
 }
+#homepage{
+  text-align:left;
+}
+.container{
+width: 500px;
+}
+body{
+
+  background-image: url(mar-safaris.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+.content{
+  background: white;
+  width: 50%;
+  padding: 40px;
+  margin:100px auto;
+}
