--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,25 @@ h1{
 }
 #homepage{
   text-align:left;
+  color: maroon;
 }
 .container{
-width: 500px;
+  widith:500px;
+  font-size: 17px;
 }
 body{
-  background-color: grey;
+  background-color: white;
 }
 .content{
   background: white;
   width: 50%;
   padding: 40px;
   margin:100px auto;
+}
+p{
+font-size: 20px;
+}
+h3{
+  color:blue;
+  text-decoration: underline;
 }
